src/main/java/com/example/servergraphql/spring/Errors/ExceptionHandlers.java
package com.example.servergraphql.spring.Errors;

import org.springframework.web.bind.annotation.RestControllerAdvice;

@RestControllerAdvice
public class ExceptionHandlers {
}
